[package]
name = "core-cage"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
winapi = { "version" = "0.3.9", features = [
    "processthreadsapi",
    "winbase",
    "sysinfoapi",
] }


[[bin]]
name = "coca"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
